fix(docs): fix radial button label alignment issue

--- a/shared/components/Choice/Choice.modules.scss
+++ b/shared/components/Choice/Choice.modules.scss
@@ -24,7 +24,7 @@
   justify-content: center;
   cursor: pointer;
 
-  margin-top: 4px;
+  margin-top: 3px;
 
   transition: border-color 0.1s linear, background-color 0.1s linear;
 }
